--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,8 +1,5 @@
 FROM php:5.6-apache
 
-RUN a2enmod rewrite
-
-# install the PHP extensions we need
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libmysqlclient-dev \
@@ -24,21 +21,15 @@ RUN cd xdebug-2.3.3 && phpize && ./configure --enable-xdebug && make && make ins
 COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 RUN echo "date.timezone = 'Europe/Berlin'" >> /usr/local/etc/php/php.ini
 
-VOLUME /var/www/html
+RUN php -r "readfile('https://getcomposer.org/installer');" | php
+RUN chmod +x composer.phar && mv composer.phar /usr/bin/composer
+RUN composer global require phpunit/phpunit
 
-ENV WORDPRESS_VERSION 4.2.1
-ENV WORDPRESS_UPSTREAM_VERSION 4.2.1
-ENV WORDPRESS_SHA1 c93a39be9911591b19a94743014be3585df0512f
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
 
-# upstream tarballs include ./wordpress/ so this gives us /usr/src/wordpress
-RUN curl -o wordpress.tar.gz -SL https://wordpress.org/wordpress-${WORDPRESS_UPSTREAM_VERSION}.tar.gz \
-	&& echo "$WORDPRESS_SHA1 *wordpress.tar.gz" | sha1sum -c - \
-	&& tar -xzf wordpress.tar.gz -C /usr/src/ \
-	&& rm wordpress.tar.gz \
-	&& chown -R www-data:www-data /usr/src/wordpress
+RUN echo "PATH=$PATH:/root/.composer/vendor/bin" >> /root/.bash_profile
+RUN echo "export PATH" >> /root/.bash_profile
+RUN echo "alias wp=\"wp --allow-root \"" >> /root/.bash_profile
 
-COPY docker-entrypoint.sh /entrypoint.sh
 
-# grr, ENTRYPOINT resets CMD now
-ENTRYPOINT ["/entrypoint.sh"]
-CMD ["apache2-foreground"]
