WordPress volume must be mapped to the root, in order to give full control of the website. Updated ignore files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ wordpress:
   ports:
     - 80:80
   volumes:
-    - ./wp-content:/var/www/html/wp-content
+    - ./www:/var/www/html/
 wordpress_db:
   image: mariadb
   environment:
