--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,21 @@
-wordpress:
-  image: wordpress
+sdc_wp:
+  image: gravityrail/wordpress
   links:
-    - wordpress_db:mysql
+    - sdc_db:mysql
   ports:
     - 80:80
   volumes:
     - ./www:/var/www/html/
-wordpress_db:
+sdc_db:
   image: mariadb
   environment:
-    MYSQL_ROOT_PASSWORD: sdc
-phpmyadmin:
+    MYSQL_ROOT_PASSWORD: root
+sdc_phpmyadmin:
   image: corbinu/docker-phpmyadmin
   links:
-    - wordpress_db:mysql
+    - sdc_db:mysql
   ports:
     - 81:80
   environment:
     MYSQL_USERNAME: root
-    MYSQL_ROOT_PASSWORD: sdc
-php:
-  build: ./php/.
+    MYSQL_ROOT_PASSWORD: root
